[package]
resolver = "3"
rust-version = "1.91"
authors = [
    "dheijl",
    "joshuamegnauth54",
    "ein-shved",
    "Villardo",
    "theavege",
    "MoAlyousef",
]
edition = "2024"
name = "swyh-rs"
version = "1.12.18"
description = "Stream What You Hear written in Rust"
license = "MIT"
repository = "https://github.com/dheijl/swyh-rs/"
readme = "README.md"
default-run = "swyh-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
codegen-units = 1
lto = "thin"

[features]
gui = ["dep:fltk", "dep:fltk-theme"]
cli = ["dep:local-ip-address"]
default = ["gui"]

[[bin]]
name = "swyh-rs"
#src = "src/bin/swyh-rs"
required-features = ["gui"]

[[bin]]
name = "swyh-rs-cli"
#src = "src/bin/swyh-rs-cli"
required-features = ["cli"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies]
bitflags = "2.10.0"
cpal = "0.17.1"
crossbeam-channel = "0.5.15"
ctrlc = { version = "3.5.1", features = ["termination"] }
dasp_sample = "0.11.0"
dirs = "6.0.0"
ecow = "0.2.6"
fastrand = "2.3.0"
figura = "2.0.3"
flac-bound = { version = "0.5.0", default-features = false, features = [
    "libflac-noogg",
] }
hashbrown = "0.16.1"
htmlescape = "0.3.1"
if-addrs = "0.14.0"
itertools = "0.14.0"
lexopt = "0.3.1"
local-ip-address = { version = "0.6.9", optional = true }
log = { version = "0.4.29", features = [
    "max_level_trace",
    "release_max_level_debug",
    "serde",
] }
serde = { version = "1.0.228", features = ["derive"] }
simplelog = { version = "0.12.2", features = ["local-offset"] }
tiny_http = "0.12.0"
toml = "0.9.11"
ureq = { version = "3.1.4", default-features = false, features = [
    "charset",
    "gzip",
] }
url = "2.5.8"
wide = "1.1.1"
xml = "1.2.1"
[target.'cfg(windows)'.dependencies]
fltk = { version = "1.5.22", features = ["use-ninja"], optional = true }
fltk-theme = { version = "0.7.9", optional = true }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }
winres = "0.1.12"
[target.'cfg(unix)'.dependencies]
fltk = { version = "1.5.22", features = ["use-ninja"], optional = true }
fltk-theme = { version = "0.7.9", optional = true }
libc = "0.2.180"

[patch.crates-io]
#figura = { git = "https://github.com/saverioscagnoli/figura.git", branch = "v2" }
#figura = { git = "https://github.com/dheijl/figura_dh" }
#fltk = { git = "https://github.com/fltk-rs/fltk-rs" }
#tiny_http = { git = "https://github.com/tiny-http/tiny-http" }
#cpal = { git = "https://github.com/RustAudio/cpal.git" }
#flac-bound = { git = "https://github.com/dheijl/flac-bound" }
#flac-bound = { git = "https://github.com/nabijaczleweli/flac-bound" }
