[package]
resolver = "3"
rust-version = "1.93"
authors = [
    "dheijl",
    "joshuamegnauth54",
    "ein-shved",
    "Villardo",
    "theavege",
    "MoAlyousef",
    "saverioscagnoli",
    "Churro",
]
edition = "2024"
name = "swyh-rs"
version = "1.21.0"
description = "Stream What You Hear written in Rust"
license = "MIT"
repository = "https://github.com/dheijl/swyh-rs/"
readme = "README.md"
default-run = "swyh-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
codegen-units = 1
lto = "thin"

[features]
gui = ["dep:fltk", "dep:fltk-theme"]
cli = ["dep:local-ip-address"]
default = ["gui"]

[[bin]]
name = "swyh-rs"
#src = "src/bin/swyh-rs"
required-features = ["gui"]

[[bin]]
name = "swyh-rs-cli"
#src = "src/bin/swyh-rs-cli"
required-features = ["cli"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies]
cpal = { version = "0.18.1" }
anyhow = "1"
bitflags = "2.13.1"
crossbeam-channel = "0.5.16"
ctrlc = { version = "3.5.2", features = ["termination"] }
dasp_sample = "0.11.0"
dirs = "6.0.0"
ecow = "0.3.0"
fastrand = "2.5.0"
fluent-uri = "0.4.1"
fluent-templates = { version = "0.14.0", default-features = false, features = [
    "macros",
    "walkdir",
] }
figura = "3.0.0"
flac-bound = { version = "0.5.0", default-features = false, features = [
    "libflac-noogg",
] }
hashbrown = { version = "0.17.1", default-features = false, features = [
    "default-hasher",
    "inline-more",
    "equivalent",
] }
htmlescape = "0.3.1"
if-addrs = "0.15.0"
lexopt = "0.3.2"
local-ip-address = { version = "0.6.13", optional = true }
log = { version = "0.4.33", features = [
    "max_level_trace",
    "release_max_level_debug",
    "serde",
] }
mimalloc = { version = "0.1.52" }
serde = { version = "1.0.229", features = ["derive"] }
socket2 = "0.6.5"
simplelog = { version = "0.12.2", features = ["local-offset"] }
sys-locale = "0.3"
tiny_http = "0.12.0"
toml = "1.1.3"
ureq = { version = "3.3.0", default-features = false, features = [
    "charset",
    "gzip",
] }
wide = "1.5.0"
xml = "1.3.0"
arc-swap = "1.9.2"

[target.'cfg(windows)'.dependencies]
fltk = { version = "1.5.23", features = ["use-ninja"], optional = true }
fltk-theme = { version = "0.7.9", optional = true }
winapi-easy = { version = "0.3.0", default-features = false, features = [
    "process",
] }
winres = "0.1.12"

[target.'cfg(unix)'.dependencies]
fltk = { version = "1.5.23", features = ["use-ninja"], optional = true }
fltk-theme = { version = "0.7.9", optional = true }
rustix = { version = "1.1.4", default-features = false, features = ["process"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8.2", features = ["html_reports"] }
fastrand = "2.5.0"

[[bench]]
name = "samples_conv"
harness = false

[patch.crates-io]
#figura = { git = "https://github.com/dheijl/figura_dh" }
#fltk = { git = "https://github.com/fltk-rs/fltk-rs" }
#tiny_http = { git = "https://github.com/tiny-http/tiny-http" }
#cpal = { git = "https://github.com/RustAudio/cpal.git", branch = "perf/alsa-enumeration" }
cpal = { git = "https://github.com/RustAudio/cpal.git" }
#flac-bound = { git = "https://github.com/dheijl/flac-bound" }
#flac-bound = { git = "https://github.com/nabijaczleweli/flac-bound" }
zmij = { git = "https://github.com/dtolnay/zmij" }
